# claude-code-guide

./: .gitignore  CLAUDE.md  PRACTICE_PROJECT_ANSWERS.md
.claude/agents/: .docs-manager.md.swp  code-reviewer.md  test-runner.md
docs/: 00-overview.md  01-claude-md-guide.md  02-plan-mode-workflows.md  03-slash-commands.md  04-hooks-automation.md  05-permissions.md  06-verification-quality.md  07-mcp-integration.md  08-parallel-sessions.md  09-team-collaboration.md  10-plugins-guide.md  AGENTS.md  README.md
docs/plugins/: README.md  agent-council-tutorial.md  clarify-tutorial.md  omc-modes-tutorial.md  tech-decision-tutorial.md
practice-project/: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GUIDE.md  pyproject.toml
practice-project/.claude/: settings.json
practice-project/.claude/agents/: code-reviewer.md  test-runner.md
practice-project/.claude/commands/: debug.md  review.md  test.md  verify.md
practice-project/src/task_manager/: __init__.py  database.py  main.py  models.py  routes.py
practice-project/tests/: conftest.py  test_api.py
